--- a/PyBer_Challenge_starter_code.ipynb
+++ b/PyBer_Challenge_starter_code.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4   West Robert            39  Urban"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "4          South Jack  2019-03-06 04:28:35  34.58  3908451377344"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 126,
    "metadata": {
     "scrolled": true
    },
@@ -319,7 +319,7 @@
        "4            46  Urban  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "Name: ride_id, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "Name: driver_count, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -557,14 +557,13 @@
        "Urban                   16.571468  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#  6. Create a PyBer summary DataFrame. \n",
-    "d= {\"Total Rides\":sum_rides_by_type,\"Total Drivers\":sum_drivers_by_type}\n",
     "pyber_summary_df = pd.DataFrame(\n",
     "    {\"Total Rides\":sum_rides_by_type,\n",
     "     \"Total Drivers\":sum_drivers_by_type,\n",
@@ -577,21 +576,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total Rides                  int64\n",
+       "Total Drivers                int64\n",
+       "Total Fares                float64\n",
+       "Average Fare per Ride      float64\n",
+       "Average Fare per Driver    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#  7. Cleaning up the DataFrame. Delete the index name\n",
-    "pyber_summary_df.index.name = None"
+    "pyber_summary_df.index.name = None\n",
+    "pyber_summary_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Rides</th>\n",
+       "      <th>Total Drivers</th>\n",
+       "      <th>Total Fares</th>\n",
+       "      <th>Average Fare per Ride</th>\n",
+       "      <th>Average Fare per Driver</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rural</th>\n",
+       "      <td>125</td>\n",
+       "      <td>78</td>\n",
+       "      <td>$4,327.93</td>\n",
+       "      <td>$34.62</td>\n",
+       "      <td>$55.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Suburban</th>\n",
+       "      <td>625</td>\n",
+       "      <td>490</td>\n",
+       "      <td>$19,356.33</td>\n",
+       "      <td>$30.97</td>\n",
+       "      <td>$39.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Urban</th>\n",
+       "      <td>1625</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>$39,854.38</td>\n",
+       "      <td>$24.53</td>\n",
+       "      <td>$16.57</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Total Rides  Total Drivers Total Fares Average Fare per Ride  \\\n",
+       "Rural             125             78   $4,327.93                $34.62   \n",
+       "Suburban          625            490  $19,356.33                $30.97   \n",
+       "Urban            1625           2405  $39,854.38                $24.53   \n",
+       "\n",
+       "         Average Fare per Driver  \n",
+       "Rural                     $55.49  \n",
+       "Suburban                  $39.50  \n",
+       "Urban                     $16.57  "
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#  8. Format the columns.\n"
+    "#  8. Format the columns.\n",
+    "pyber_summary_df[\"Total Fares\"] = pyber_summary_df[\"Total Fares\"].map(\"${:,.2f}\".format)\n",
+    "pyber_summary_df[\"Average Fare per Ride\"] = pyber_summary_df[\"Average Fare per Ride\"].map(\"${:,.2f}\".format)\n",
+    "pyber_summary_df[\"Average Fare per Driver\"] = pyber_summary_df[\"Average Fare per Driver\"].map(\"${:,.2f}\".format)\n",
+    "pyber_summary_df           "
    ]
   },
   {
