--- a/PyBer_Challenge_starter_code_orig.ipynb
+++ b/PyBer_Challenge_starter_code_orig.ipynb
@@ -340,7 +340,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "pythondata",
    "language": "python",
    "name": "pythondata"
   },
@@ -354,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
